Serve /devstate/*command
